# website-sanitizer

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  logs.md  pyproject.toml
.github/workflows/: build-image.yml  train.yml
db/: annotations.py  init.sql  pages.py  pool.py
docs/: features.md
models/bigru/: bigru_56f.ipynb  bigru_feature_importance_56.ipynb  bigru_feature_search_56.ipynb
models/qwen/: train.py
scraper/: browser.py  cli.py  converter.py  cookies.py  fetcher.py  rate_limiter.py  robots.py  runner.py
tests/: test_comparison.py  test_llm_accuracy.py  test_trafilatura.py
tools/: benchmark_llms.py  migrate_tier.py  regenerate_markdown.py  upload_hf_data.py
tools/auto_annotation/: annotator.py  bulk_annotate.py  config.py  prompt.py  single_annotate.py
tools/data_export/: export_data.py  export_features.py  export_grpo.py  export_sft.py
training/: Dockerfile  config.yaml  entrypoint.sh  launch_pod.py  notify.py  requirements.txt  run.py  validate_config.py
ui/: __main__.py  app.py  cli.py  templating.py
ui/routers/: annotate.py  pages.py
ui/static/: app.js  styles.css
ui/templates/: base.html  list.html
ui/templates/partials/: modal.html  table.html
