[project]
name = "website-sanitation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "python-dotenv>=1.0,<2",
    "cloakbrowser",
    "beautifulsoup4",

    "httpx",
    "tqdm",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]
training = ["slack_sdk>=3.27", "huggingface_hub>=0.32"]

[tool.setuptools.packages.find]
include = ["db*", "scraper*", "tools*", "ui*", "training*"]
